# service/api/api-handler.go
@@ -18,7 +18,7 @@ func (rt *_router) Handler() http.Handler {
 	// MESSAGES
 	rt.router.PUT("/message", rt.wrap(rt.sendMessage))
 	rt.router.DELETE("/message/:messageId", rt.wrap(rt.deleteMessage))
-	rt.router.PUT("/message/forward/:messageId/:chatId", rt.wrap(rt.forwardMessage))
+	rt.router.PUT("/message/forward/:messageId", rt.wrap(rt.forwardMessage))
 	rt.router.PUT("/message/comment/:messageId", rt.wrap(rt.commentMessage))
 	rt.router.DELETE("/comment/:commentId", rt.wrap(rt.uncommentMessage))
 
